--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,17 +1,25 @@
 FROM php:8.1-fpm-alpine
 
-RUN apk add --no-cache nginx supervisor wget
+WORKDIR /var/www/html
+
+RUN apk add --no-cache nginx supervisor wget nodejs npm
 
 RUN mkdir -p /run/nginx
 COPY docker/nginx.conf /etc/nginx/nginx.conf
 
-RUN mkdir -p /app
-COPY . /app
+COPY . /var/www/html
 
 RUN sh -c "wget http://getcomposer.org/composer.phar && chmod a+x composer.phar && mv composer.phar /usr/local/bin/composer"
-RUN cd /app && \
-    /usr/local/bin/composer install --no-dev
 
-RUN chown -R www-data: /app
+RUN /usr/local/bin/composer install --no-dev
 
-CMD sh /app/docker/startup.sh
+COPY ./package.json /var/www/html
+COPY ./package-lock.json /var/www/html
+
+RUN npm install
+
+RUN npm run build
+
+RUN chown -R www-data: /var/www/html
+
+CMD sh /var/www/html/docker/startup.sh
