--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /var/www/html
 
 RUN apk add --no-cache nginx supervisor wget nodejs npm
 
+RUN docker-php-ext-install pdo pdo_mysql
+
 RUN mkdir -p /run/nginx
 COPY docker/nginx.conf /etc/nginx/nginx.conf
 
